# Django-site

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  test.html
MyCSVFiles/: orders.csv  products.csv
mysite/: datadump.json
mysite/blogapp/: admin.py  forms.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_author.py  0003_article_created_by_alter_article_category_and_more.py  0004_alter_article_created_by.py  0005_alter_article_created_by.py
mysite/blogapp/static/css/: detail-style.css  (+1 more)
mysite/logs/: log.txt
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_bio.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  misc.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  apps.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: fixture.json  orders-fixture.json  products-fixture.json  user-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_by_alter_order_created_at_and_more.py  0003_order_receipt_alter_product_created_by.py  0004_product_preview.py  0005_alter_product_preview_productimage.py  0006_alter_product_preview_alter_productimage_image.py  0007_product_quantity.py  0008_alter_order_options_alter_product_description_and_more.py  0009_alter_product_created_by.py  0010_alter_product_created_by.py
(+58 files in other folders)
