[tool.poetry]
name = "django-site-project"
version = "0.1.0"
description = ""
authors = ["Владислав Буррасков <bourraska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
asgiref = "^3.8.1"
sqlparse = "^0.5.1"
django-resized = "^1.0.2"
docutils = "^0.21.2"
flake8 = "^7.1.0"
flake8-docstrings = "^1.7.0"
drf-spectacular = "^0.27.2"
django-debug-toolbar = "^4.4.6"
django-filter = "^24.2"
sentry-sdk = "^2.10.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
